feat: improve hero section

--- a/work_phase_4/index.html
+++ b/work_phase_4/index.html
@@ -47,10 +47,10 @@
         <section class="hero-container" aria-labelledby="hero-title">
             <div class="hero-content">
                 <p class="hero-eyebrow">Welcome to FeedCrumbs</p>
-                <h1 id="hero-title" class="hero-title">Share Your Culinary Heritage</h1>
+                <h1 id="hero-title" class="hero-title">Your Cultural Kitchen, Our Shared Table</h1>
                 <p class="hero-subtitle">
-                    Connect with a vibrant community that celebrates traditional recipes
-                    and cultural food stories from every corner of the world.
+                    Connect with diverse communities celebrating traditional cuisines and the rich stories behind every
+                    dish.
                 </p>
                 <div class="hero-actions">
                     <a href="#highlight" class="button button-primary">Explore</a>
@@ -128,7 +128,7 @@
             <header class="about-header">
                 <span class="about-eyebrow">Our Story</span>
                 <h2 id="about-title" class="about-title">Get to Know FeedCrumbs</h2>
-                <p class="about-description">A platform built on pride, warmth, and understanding—where every dish
+                <p class="about-description">A platform built on pride, warmth, and understanding. where every dish
                     tells a story and every story builds connection.</p>
             </header>
 
