feat: improve implementation rationale

--- a/work_phase_4/implementation_rationale.html
+++ b/work_phase_4/implementation_rationale.html
@@ -86,12 +86,29 @@
                                         <br>
 
 
-                                        The website features such as FeedCrumbs, Crumbings, CrumbsMap, and OZvent are
+
+                                        As explained in the
+                                        <a href="../work_phase_3/site_map.html" class="conventional-link"
+                                            target="_blank" rel="noopener noreferrer">Sitemap in A3 </a>
+                                        , each page in the sitemap is designed to answer all user needs and client
+                                        brief. In order to accomplish the planning, I implement all the planned main
+                                        pages in the sitemap. Overall, rhe website features such as FeedCrumbs,
+                                        Crumbings, CrumbsMap, and OZvent are
                                         designed to facilitate sharing of culinary heritage, exploration of diverse food
                                         cultures, and community engagement. These features align with the user needs and
-                                        client brief
-                                        of promoting community connection and engagement through traditional
-                                        culinary. I use an inclusive, diverse, and warm hero section to welcome
+                                        client brief of promoting community connection and engagement through
+                                        traditional culinary, while the about, account, and accessibility pages are
+                                        designed to provide users with information about the platform, and customization
+                                        options to enhance their experience, which also aligns with the client brief of
+                                        ethical and inclusive design. Several other key elements to support the client
+                                        brief
+                                        and user needs are explained below.
+
+
+                                        <br>
+                                        <br>
+
+                                        I use an inclusive, diverse, and warm hero section to welcome
                                         users from all backgrounds, which aligns with the client’s value of inclusivity.
                                         To support the reflective aspect of the client’s goals, I have used ethical and
                                         welcoming language throughout the website, encouraging users to share their
@@ -119,16 +136,15 @@
                                         Overall, my strategy to align the implementation with the client and user needs
                                         is basically by following the planned features, accessibility considerations,
                                         and ethical design principles that I have identified in the previous phases of
-                                        the project, alongside with the knowledge and skills that I have learned
-                                        throughout the course, and also the many help from the teaching team.
+                                        the project, alongside with the knowledge and the skills that I have learned
+                                        throughout the course.
 
 
                                     </p>
                                 </div>
                             </div>
                             <div class="accordion-item pt-4">
-                                <button class="accordion-header">▷ Accessibility and Ethical Considerations (and
-                                    Accessibility Audit)</button>
+                                <button class="accordion-header">▷ Accessibility and Ethical Considerations</button>
                                 <div class="accordion-content">
                                     To make sure the platform is accessible to all users, I have implemented various
                                     accessibility features such as alt text for images, proper contrast ratio,
@@ -137,17 +153,8 @@
                                     diverse abilities can fully participate in the platform. To make sure the
                                     the platform accessibility is up to standard, I have conducted an accessibility
                                     audit using tools
-                                    using IBM Equal Access Accessibility Checker.
-                                    <br>
-
-                                    <img src="assets/images/acc1.png" alt="Accessibility Audit Screenshot"
-                                        class="my-4 small-image" />
-                                    <img src="assets/images/acc2.png" alt="Accessibility Audit Screenshot"
-                                        class="my-4 small-image" />
-                                    <img src="assets/images/acc3.png" alt="Accessibility Audit Screenshot"
-                                        class="my-4 small-image" />
-
-                                    <br>
+                                    using IBM Equal Access Accessibility Checker (screenshots available on Audit
+                                    section).
 
                                     I have fixed all the accessibility issues that were identified in the audit, such as
                                     missing alt text, insufficient color contrast, and improper heading structure,
@@ -157,9 +164,9 @@
                                     to fix it with the current limitation of the API that I used to fetch the data.
                                     However, I have made sure that all other aspects of the crumbings page are
                                     accessible, such as proper heading structure, and alt text for images. However,
-                                    IBM Equal Access Accessibility Checker is not fully checks all the WCAG Level AA
-                                    guidelines, so I have also do my best effort to manually check the website for other
-                                    accessibility issues that might not be covered by the tool.
+                                    I am aware that IBM Equal Access Accessibility Checker is not fully checks all the
+                                    WCAG Level AA guidelines, so I have also do my best effort to manually check the
+                                    website for other accessibility issues that might not be covered by the tool.
 
                                     <br>
                                     <br>
@@ -174,10 +181,7 @@
 
                                     To make sure that the implementation is ethically sound, I have adhered to the
                                     ACS Code of Ethics throughout the design and development process. This includes
-                                    ensuring user
-                                    privacy and data security, obtaining informed consent for data collection, and
-                                    being
-                                    transparent about how user data will be used. for example, I adjust the
+                                    ensuring user privacy for example, I adjust the
                                     newsletter
                                     subscription form
                                     to be only ask for email, name, and preferred community, instead of more
@@ -212,7 +216,7 @@
                                     made to enhance accessibility and ensure that all users can easily read and navigate
                                     the
                                     platform. Also, I have the adjustment in the planned navbar in A3, where I have
-                                    planned to use mixed conventional navbar and vertical sidebar navigation for
+                                    planned to use mixed navbar and vertical sidebar navigation for
                                     desktop, but I ended up using only horizontal top navigation bar instead. This
                                     change is made to simplify the navigation and ensure consistent navigation
                                     experience
@@ -284,6 +288,38 @@
                                     avoid conflicts, as also reccommended in the studio activities.
 
 
+                                </div>
+                            </div>
+
+                            <div class="accordion-item pt-4">
+                                <button class="accordion-header">▷ Accessibility Audit</button>
+                                <div class="accordion-content">
+                                    Below are the screenshots of the accessibility audit results for each page using IBM
+                                    Equal Access Accessibility Checker:
+
+                                    <br>
+
+                                    <img src="assets/images/acc1.png" alt="Home Page Accessibility Audit Screenshot"
+                                        class="my-4 small-image" />
+                                    <img src="assets/images/acc2.png" alt="FeedCrumbs Accessibility Audit Screenshot"
+                                        class="my-4 small-image" />
+                                    <img src="assets/images/acc3.png" alt="CrumbsMap Accessibility Audit Screenshot"
+                                        class="my-4 small-image" />
+                                    <img src="assets/images/acc4.png" alt="Crumbings Accessibility Audit Screenshot"
+                                        class="my-4 small-image" />
+                                    <img src="assets/images/acc5.png" alt="OZvent Accessibility Audit Screenshot"
+                                        class="my-4 small-image" />
+                                    <img src="assets/images/acc6.png" alt="About Accessibility Audit Screenshot"
+                                        class="my-4 small-image" />
+                                    <img src="assets/images/acc7.png" alt="Profile page Accessibility Audit Screenshot"
+                                        class="my-4 small-image" />
+
+                                    <br>
+
+                                    Overall, the accessibility audit results show that the website has been designed
+                                    with accessibility in mind, with no critical issues found across all pages. There
+                                    are minor issues in the Crumbings page in the items, as I have mentioned before, but
+                                    other than that, all other pages have no critical issues.
                                 </div>
                             </div>
 
