--- a/work_phase_4/genai_mt_acknowledgement.html
+++ b/work_phase_4/genai_mt_acknowledgement.html
@@ -65,183 +65,144 @@
                             <tr>
                                 <td>Claude</td>
                                 <td>
-                                    I wanted to understand more about Gestalt Principles especially in creating the
-                                    wireframe. I ask Claude to explain more about the principles that I should
-                                    considering based on different sections of the wireframe, and give me some
-                                    feedbacks on my existing wireframe annotations.
-                                </td>
-                                <td>
-                                    "Can you explain more about Gestalt Principles, especially in creating a
-                                    wireframe?"
-                                </td>
-                                <td>Wireframe in the behavorial page</td>
-                                <td>5 Oct 2025</td>
-                            </tr>
-                            <tr>
-                                <td>Claude</td>
-                                <td>
-                                    I have difficulties following the IA slides on creating the gallery component,
-                                    somehow
-                                    the styling given is not working well with my existing code. Therefore I ask
-                                    AI to help me create a simple gallery component that I can implement to my existing
-                                    code.
-                                </td>
-                                <td>
-                                    "Can you give me ideas on how to improve my existing gallery component? Here is
-                                    my existing gallery component, can you give me some references on how to improve
-                                    it?"
-                                </td>
-                                <td>Gallery used in Visceral Design and Behavioral Design</td>
-                                <td>24 September 2025</td>
-                            </tr>
-                            <tr>
-                                <td>Claude</td>
-                                <td>
-                                    I used Claude to assess all my annotations (sitemap, style guide), based on the
-                                    WCAG guidelines, UX/UI principles and ethical considerations.
+                                    Help me learn and improve the javascript code for form validation, error
+                                    handling, and user feedback messages.
                                 </td>
                                 <td>
                                     "
-                                    This is my annotations for the CrumbsMap Sitemap, can you give me feedbacks
-                                    based on WCAG guidelines, UX/UI principles and ethical considerations regarding this
-                                    feature?
+                                    In what degree that this form validation code is reusable and modular? How can I
+                                    improve it to be more reusable across multiple forms on my website?
+                                    "
+                                    "
+                                    Can you help me refactor this javascript code I have made for form validation to
+                                    make it more reusable and modular? I want to be able to easily apply the same
+                                    validation logic to multiple forms on my
+                                    website.
+                                    "
+                                    "
+                                    Also, can you suggest improvements to enhance error handling and user
+                                    feedback messages? These are the accessibility considerations I want to follow ..."
                                     "
                                 </td>
-                                <td>Wireframe in the behavorial page</td>
-                                <td>Oct 2025</td>
-                            </tr>
-                            <tr>
-                                <td>Claude</td>
-                                <td>
-                                    Same as above, I have difficulties following the IA slides on creating the
-                                    sidebar component that opens up when clicking on the images in the gallery.
-                                </td>
-                                <td>
-                                    "Can you give me ideas on how to create a sidebar that opens up when clicking
-                                    on the images in the gallery? Here is my existing gallery component, I wanted
-                                    to create a sidebar that opens up when clicking on the images in the gallery,
-                                    can you give me some guidance on how to create it?"
-                                </td>
-                                <td>Side Bar in Gallery</td>
-                                <td>5 Oct 2025</td>
-
-                            </tr>
-                            <tr>
-                                <td>Claude</td>
-                                <td>Improve contrast in my color scheme, since
-                                    I violate the minimum contrast ratio of 4.5:1 between text and background color.
-                                </td>
-                                <td>
-                                    "Can you give me suggestions on how to improve the contrast in my color
-                                    scheme? I violate the minimum contrast ratio of 4.5:1 between text and background
-                                    color."
-                                </td>
-                                <td>
-                                    Color Scheme in Viscreal Design and in Base.css
-                                </td>
-                                <td>6 Oct 2025</td>
-                            </tr>
-                            <tr>
-                                <td>Claude</td>
-                                <td>Give feedback on my Plugin request based on the checklist given in the IA slides
-                                    given.
-                                </td>
-                                <td>
-                                    "Below are the checklists for a good ethical assessment of the plugin request, can
-                                    you give me feedbacks on my ethical response document based on the checklist?"
-                                </td>
-                                <td>Ethical Response</td>
-                                <td>6 Oct 2025</td>
-                            </tr>
-                            <tr>
-                                <td>Claude & ChatGPT</td>
-                                <td>Create a prompt to use in ChatGPT to create imagery in Reflective Design</td>
-                                <td>
-                                    "Here is the {details} of what I want in the imagery for the reflective design, can
-                                    you create a prompt for me to generate the imagery using ChatGPT?"
-                                </td>
-                                <td>Imagery generation in Reflective Design
-                                </td>
-                                <td>5 Oct 2025</td>
-                            </tr>
-
-                            <tr>
-                                <td>Quillbot</td>
-                                <td>Improvement on general grammar and english sentences in
-                                    site map, style guides, and ethical response
-                                </td>
-                                <td>
-                                    -
-                                </td>
-                                <td>Site map, style guides, and ethical response</td>
-                                <td>Oct 2025</td>
-                            </tr>
-
-                            <tr>
-                                <td>Claude</td>
-                                <td>Improvement on general grammar and english sentences in
-                                    site map, style guides, and ethical response</td>
-                                <td>
-                                    "Can you improve this sentence to be more proper english?"
-                                </td>
-                                <td>Site map, style guides, and ethical response</td>
-                                <td>Oct 2025</td>
-                            </tr>
-                            <tr>
-                                <td>Claude</td>
-                                <td>Color Scheme and Typography layout styling improvement</td>
-                                <td>
-                                    "Here is my existing color scheme and typography layout, can you give me some
-                                    suggestions on how to improve it?"
-                                </td>
-                                <td>Navbar</td>
-                                <td>Sept 2025</td>
-                            </tr>
-                            <tr>
-                                <td>Claude</td>
-                                <td>Improving Community Form</td>
-                                <td>
-                                    "Here is my existing community form code, can you give me some suggestions on how
-                                    to improve it based on WCAG guidelines?"
-                                </td>
-                                <td>Navbar</td>
+                                <td>form.js in js/modules/form.js</td>
                                 <td>5 Oct 2025</td>
                             </tr>
                             <tr>
                                 <td>Claude</td>
-                                <td>Understanding Accordion code</td>
                                 <td>
-                                    "Can you explain to me how this accordions code work?"
+                                    Help me learn and implement the best practices for loading and displaying a
+                                    leaderboard of top recipes and the timeline post, by implementing loading
+                                    indicators, error
+                                    handling, empty state, and rendering optimizations.
                                 </td>
-                                <td>Navbar</td>
-                                <td>19 September 2025</td>
-                            </tr>
+                                <td>
+                                    "
+                                    Can you give me ideas on how to improve my existing code for displaying the post
+                                    timeline and leaderboard of top recipes?
+                                    "
 
-                            <tr>
-                                <td>Claude</td>
-                                <td>Improvement on Navbar </td>
-                                <td>
-                                    "Can you give me ideas on how to improve my existing navbar? Here is my existing
-                                    navbar code, can you give me some references on how to improve it?"
-                                </td>
-                                <td>Navbar</td>
-                                <td>4 Oct 2025</td>
-                            </tr>
+                                    "
+                                    I agree, I want to implement best practices for loading indicators, error handling,
+                                    empty state, and rendering optimizations. Can you guide me to refactor my existing
+                                    code to incorporate these best practices?
+                                    "
 
-                            <tr>
-                                <td>Claude</td>
-                                <td>Improving typography (font sizings) based on the
-                                    golden ratio
+                                    "
+                                    Is it possible to refactor this code to make it more reusable and modular? I want to
+                                    be able to easily apply the same logic to multiple sections on my website.
+                                    "
                                 </td>
-                                <td>
-                                    "Can you give me suggestions on how to improve my typography (font sizings) based
-                                    on the golden ratio?"
-                                </td>
-                                <td>Viscreal Design Page</td>
+                                <td>get-leaderboard.js and get-timeline.js</td>
                                 <td>5 Oct 2025</td>
-
                             </tr>
 
+                            <tr>
+                                <td>Claude</td>
+                                <td>
+                                    Help me learn and implement the time and date display format for the post timeline.
+                                </td>
+                                <td>
+                                    "
+                                    Can you help me implement a function to format and display the time and date for
+                                    each post in the timeline? My idea is to show how long ago the post was made
+                                    (e.g., "5 minutes ago", "2 hours ago", "3 days ago", etc.). The format of the time
+                                    is given as as follows ...
+                                    "
+
+
+                                    "
+                                    This is the code I have made so far, can you help me refactor it so that it could be
+                                    more reusable and modular?
+                                    "
+                                </td>
+                                <td>getTimeAgo.js</td>
+                                <td>5 Oct 2025</td>
+                            </tr>
+
+                            <tr>
+                                <td>Claude</td>
+                                <td>
+                                    Help me fix this modal component code (its not working properly) and also make it
+                                    more
+                                    reusable and modular across multiple sections of my website.
+                                </td>
+                                <td>
+                                    "
+                                    Can you help me fix this modal component code? It wont close properly when I click
+                                    outside the modal or on the close button.
+                                    "
+
+                                    "
+                                    Also, can you help me refactor this code to make it more reusable and modular?
+                                    I want to be able to easily apply the same modal component across multiple sections
+                                    of my website.
+                                    "
+                                </td>
+                                <td>modal.js</td>
+                                <td>5 Oct 2025</td>
+                            </tr>
+
+                            <tr>
+                                <td>Claude</td>
+                                <td>
+                                    Help me create the "Other" community interest option for the newsletter subscription
+                                    form, so that when users select "Other", a text input field appears allowing them to
+                                    specify their custom interest.
+                                </td>
+                                <td>
+                                    "
+                                    Can you help me implement the "Other" option for the community interest dropdown in
+                                    my newsletter subscription form? When users select "Other", I want a text input
+                                    field to appear allowing them to specify their custom interest.
+                                    "
+                                </td>
+                                <td>newsletter-plugin.js</td>
+                                <td>5 Oct 2025</td>
+                            </tr>
+
+                            <tr>
+                                <td>Claude</td>
+                                <td>
+                                    Help me "Hackyly" create the forms using the API but with different fields and
+                                    labels,
+                                    so for the users its look like a normal form but in the backend its using API for
+                                    different purposes
+                                </td>
+                                <td>
+                                    "
+                                    Help me fix this crumbings form to use community API but with different fields and
+                                    labels, so for the users its look like a normal. Extract the recipe name, and
+                                    creator
+                                    from 2 field, but send it to the API as a single field. Also, extract the attempts
+                                    from the email field and send it to the API as a separate field.
+                                    "
+
+                                    "How to strip the email so that it contains a mocked number of attempts?"
+                                    "How to strip the name field so that it looks like a username instead of email?"
+                                </td>
+                                <td>crumbings.js and feed_crumbs.js</td>
+                                <td>5 Oct 2025</td>
+                            </tr>
                         </tbody>
                     </table>
             </section>
